# biocomp

./: .gitignore  .prettierrc  CITATION.cff  LICENSE.md  README.md  app.py  biocomp.py  calc_biocomp.py  objfunc.py  plotter.py  pyproject.toml  requirements.txt  streamlit_app.py  🌳_BioComp.py
.github/workflows/: python.yml
pages/: About.py  Usage.py
src/: about_page.py  app.py  home.py  home_page.py  optimize_biocomp.py  plotter.py  usage_page.py
src/biocomp/: __init__.py  app.py  calc_biocomp.py
src/biocomp/static/: graph.js
src/biocomp/templates/: about.html  base.html  docs.html  footer.html  index.html  results.html  usage.html
src/pages/: About.py
static/: style.css
templates/: about.html  index.html  results.html  usage.html
tests/: test_app.py
