[project]
name = "biocomp"
version = "25.12"
description = "Web app for estimating biomass composition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chemics>=24.1",
    "quart>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
